# edgecase

./: .gitignore  Alkahest131!  CHANGELOG.md  CODE_REVIEW_REPORT.md  EdgeCase_Navigation_Map.md  EdgeCase_Navigation_Map_v1.2.md  EdgeCase_Navigation_Map_v1_3.md  LICENSE  README.md  SECURITY.md  edit_session_fee_fix.py  edit_session_fixed.py  main.py  pyproject.toml  requirements.txt  session_fixed.js
.github/: ISSUE_TEMPLATE.md
ai/: __init__.py  assistant.py  prompts.py
core/: config.py  database.py  encryption.py
data/: edgecase.db
docs/: Architecture_Decisions.md  Billing_System_Audit.md  Bug_Investigation_Log.md  CSS_Architecture.md  Database_Schema.md  Development_Workflow.md  Distribution_Notes.md  Documentation_README.md  EdgeCase_Development_Timeline_GitVerified.md  EdgeCase_Navigation_Map_v1_9.md  EdgeCase_Navigation_Map_v2_0.md  EdgeCase_Navigation_Map_v2_1.md  EdgeCase_Navigation_Map_v3_0.md  EdgeCase_Navigation_Map_v4_0.md  EdgeCase_Navigation_Map_v5_0.md  EdgeCase_Navigation_Map_v5_3.md  EdgeCase_Navigation_Map_v5_4.md  EdgeCase_Navigation_Map_v5_5.md  EdgeCase_Project_Status.md  Flask_Double_Login_Fix.md  Future_Refinements.md  Route_Reference.md  Testing_Complete_Summary.md  Testing_Guide.md  WAL_Checkpoint_Backup_Issue.md
edgecase_equalizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pdf/: client_export.py  generator.py  ledger_report.py
tests/: __init__.py  test_edgecase.py
utils/: __init__.py  backup.py  validators.py
web/: app.py  cli.py  utils.py
web/blueprints/: ai.py  auth.py  backups.py  clients.py  entries.py  entries.py.before_url_fix  ledger.py  links.py  scheduler.py  settings.py  statements.py  types.py  utils.py
web/templates/: add_client.html  add_edit_link_group.html  add_edit_type.html  (+23 more)
(+70 files in other folders)
